[FIX] nav broken on Apple device

--- a/src/css/components/left.scss
+++ b/src/css/components/left.scss
@@ -103,6 +103,7 @@
 
     .hashtag {
       width: 15px;
+      height: 100%;
       margin: 0 5px 0 15px;
     }
 
