--- a/styles/globals.css
+++ b/styles/globals.css
@@ -191,6 +191,7 @@ a {
 }
 .left .channel .hashtag {
   width: 15px;
+  height: 100%;
   margin: 0 5px 0 15px;
 }
 .left .channel_active {
